nobase_include_HEADERS = \
	osux.h \
	osux/gettext.h \
	osux/timingpoint.h \
	osux/keys.h \
	osux/hit.h \
	osux/replay.h \
	osux/mods.h \
	osux/beatmap.h \
	osux/database.h \
	osux/beatmap_database.h \
	osux/error.h \
	osux/string.h \
	osux/read.h \
	osux/beatmap_set.h \
	osux/data.h \
	osux/hash_table.h \
	osux/list.h \
	osux/split.h \
	osux/uleb128.h \
	osux/list_node.h \
	osux/stack.h \
	osux/heap.h \
	osux/taiko_autoconvert.h \
	osux/yaml.h \
	osux/xz_decomp.h \
	osux/sum.h \
	osux/md5.h \
	osux/util.h \
	osux/hitsound.h \
	osux/color.h \
	osux/hitobject.h \
	osux/event.h \
	osux/parser.h \
	osux/game_mode.h \
	osux/table.h \
	osux/compiler.h \
	osux/windows.h
